Adding a default image and adding text to json

--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -103,3 +103,4 @@ flutter:
     - assets/patologies.json
     - assets/patologiesDetails.json
     - assets/images/displasia_fibrosa.jpg
+    - assets/images/default_image.jpg
