--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   convert: ^3.1.1
   webview_flutter: ^2.0.15
+  flutter_typeahead: ^4.8.0
 
 dev_dependencies:
   flutter_test:
