--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   convert: ^3.1.1
   webview_flutter: ^2.0.15
   flutter_typeahead: ^4.8.0
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
