--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   webview_flutter: ^2.0.15
   flutter_typeahead: ^4.8.0
   animated_splash_screen: ^1.3.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
