Adding logo to splash screen

--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -105,5 +105,4 @@ flutter:
   assets:
     - assets/patologies.json
     - assets/patologiesDetails.json
-    - assets/images/displasia_fibrosa.jpg
-    - assets/images/default_image.jpg
+    - assets/images/
