--- a/App/slide_viewer/android/app/src/main/AndroidManifest.xml
+++ b/App/slide_viewer/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="slide_viewer"
+        android:label="Guia de Patologia Oral"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         android:usesCleartextTraffic="true">
