--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_typeahead: ^4.8.0
   animated_splash_screen: ^1.3.0
   internet_connection_checker: ^1.0.0+1
+  carousel_slider: ^4.2.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -114,3 +116,4 @@ flutter:
     - assets/patologiesDetails.json
     - assets/images/
     - assets/laminas/
+    - assets/laminas/ImagensExtra/
