Adding study case structure

--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -114,6 +114,8 @@ flutter:
   assets:
     - assets/patologies.json
     - assets/patologiesDetails.json
+    - assets/caseStudies.json
+    - assets/caseStudies/
     - assets/images/
     - assets/laminas/
     - assets/laminas/ImagensExtra/
