Chaging Json file to specific folder

--- a/App/slide_viewer/pubspec.yaml
+++ b/App/slide_viewer/pubspec.yaml
@@ -112,9 +112,7 @@ flutter:
       fonts:
         - asset: assets/fonts/OpenSans-Regular.ttf
   assets:
-    - assets/patologies.json
-    - assets/patologiesDetails.json
-    - assets/caseStudies.json
+    - assets/json/
     - assets/caseStudies/
     - assets/images/
     - assets/laminas/
